--- a/pru.html
+++ b/pru.html
@@ -1,19 +1,29 @@
 <html>
 <head>
-<title>elapsed</title>
-<script>
-function init() {
- setInterval(increase,1000);
+ <title>Rectangle</title>
+ <script type="text/javascript">
+ var ctx;
+
+
+ function init(){
+ ctx = document.getElementById('canvas').getContext('2d');
+ ctx.fillStyle = "rgb(250,0,0)";
+ ctx.save();
+ ctx.translate(50,50); //move origin
+ ctx.rotate(-Math.PI/6); //do rotation
+ ctx.translate(-50,-50); // move origin back
+ ctx.fillRect(50,50,100,200); //draw rectangle
+ ctx.restore(); //undo all the transformations
+ ctx.fillStyle = "rgb(0,0,250)";
+ ctx.fillRect(50,50,5,5); //draw little blue square
 }
-function increase() {
- document.f.secs.value = String(1+Number(document.f.secs.value));
- Number()
-}
+
+
 </script>
 </head>
 <body onLoad="init();">
-<form name="f">
-<input type="text" name="secs" value="0"/>
-</form>
+<canvas id="canvas" width="400" height="300">
+Your browser doesn't support the HTML5 element canvas.
+</canvas>
 </body>
 </html>
