--- a/pru.html
+++ b/pru.html
@@ -4,24 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        .custom-button {
-            background-color: #3498db;
-            color: #ffffff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: transform 0.2s, box-shadow 0.2s;
-        }
+        :root {
+      box-sizing: border-box;
+    }
 
-        .custom-button:hover {
-            transform: scale(1.05); /* Scale up the button on hover */
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
-        }
+    *,
+    ::before,
+    ::after {
+      box-sizing: inherit;
+    }
+
+    .square {
+ width: 10vmin;
+ height: 10vmin;
+ background-color: #369;
+ float: left;
+} 
+
+.parrafo {
+    max-width: 150px;
+}
+
+    
     </style>
 </head>
 <body>
-    <button class="custom-button">Click Me</button>
+   Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+   Quas repudiandae iure quaerat quasi expedita ipsam quo eveniet accusantium, totam cum. Neque non accusamus ut sequi fugiat aut nisi sapiente inventore
+    <div class="square">Square</div>
 </body>
 </html>
